--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,13 +1,62 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>We welcome you Avec Plaisir!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Avec Plaisir</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/css/style.css">
+</head>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Avec Plaisir</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+        <ul class="navbar-nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Menus
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Brunch</a></li>
+              <li><a class="dropdown-item" href="#">Lunch</a></li>
+              <li><a class="dropdown-item" href="#">Dinner</a></li>
+            </ul>
+          </li>
+          <li class="dropdown-item"><a class="nav-link" href="#">Reservations</a></li>
+          <li class="dropdown-item"><a class="nav-link" href="#">Sign Up</a></li>
+          <li class="dropdown-item"><a class="nav-link" href="#">Sign In</a></li>
+        </ul>
+      </div>
+      <!-- <div class="navbar-nav nav-item justify-content-left">
+            <a class="nav-link btn btn-success" href="#" role="button">Sign In/Sign Up</a>
+            </div> -->
+    </div>
+  </nav>
+  <!-- Hero -->
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>Welcome "Avec Plaisir"</h1>
+      <p>Modern French cuisine</p>
+      <button>Reserve</button>
+    </div>
+  </div>
+  <!-- Hero -->
+  <h1>Avec plaisir!</h1>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
