--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -12,48 +12,49 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Avec Plaisir</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-        <ul class="navbar-nav justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Menus
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Brunch</a></li>
-              <li><a class="dropdown-item" href="#">Lunch</a></li>
-              <li><a class="dropdown-item" href="#">Dinner</a></li>
-            </ul>
-          </li>
-          <li class="dropdown-item"><a class="nav-link" href="#">Reservations</a></li>
-          <li class="dropdown-item"><a class="nav-link" href="#">Sign Up</a></li>
-          <li class="dropdown-item"><a class="nav-link" href="#">Sign In</a></li>
-        </ul>
-      </div>
-      <!-- <div class="navbar-nav nav-item justify-content-left">
-            <a class="nav-link btn btn-success" href="#" role="button">Sign In/Sign Up</a>
-            </div> -->
-    </div>
-  </nav>
   <!-- Hero -->
   <div class="hero-image">
-    <div class="hero-text">
-      <h1>Welcome "Avec Plaisir"</h1>
-      <p>Modern French cuisine</p>
-      <button>Reserve</button>
+    <div class="container">
+      <!-- Nav Bar-->
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+        <a class="navbar-brand" href="#"><span id="logo">A</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-left" id="navbarNavDropdown">
+          <ul class="navbar-nav justify-content-right">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"><span class="nav-colors">Home</span></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="nav-colors">Menus</span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Brunch</a></li>
+                <li><a class="dropdown-item" href="#">Lunch</a></li>
+                <li><a class="dropdown-item" href="#">Dinner</a></li>
+              </ul>
+            </li>
+            <li class="dropdown-item"><a class="nav-link" href="#"><span class="nav-colors">Reservations</span></a></li>
+            <li class="dropdown-item"><a class="nav-link" href="#"><span class="nav-colors">Sign Up</span></a></li>
+            <li class="dropdown-item"><a class="nav-link" href="#"><span class="nav-colors">Sign In</span></a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="cover-text">
+        <h1 id="logo-text">Avec Plaisir</h1>
+        <h2>We welcome you "avec plaisir"...with pleasure!
+        </h2>
+        <a href="#" class="btn btn-secondary btn-sm">Reserve</a>
+      </div>
     </div>
   </div>
   <!-- Hero -->
-  <h1>Avec plaisir!</h1>
+
+
+  <h1>PLACEHOLDER</h1>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
   </script>
