--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -28,7 +28,8 @@
               <a class="nav-link active" aria-current="page" href="#"><span class="nav-colors">Home</span></a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 <span class="nav-colors">Menus</span>
               </a>
               <ul class="dropdown-menu">
@@ -45,7 +46,7 @@
       </nav>
       <div class="cover-text">
         <h1 id="logo-text">Avec Plaisir</h1>
-        <h2>We welcome you "avec plaisir"...with pleasure!
+        <h2>Welcoming you "avec plaisir"...with pleasure!
         </h2>
         <a href="#" class="btn btn-secondary btn-sm">Reserve</a>
       </div>
@@ -55,6 +56,33 @@
 
 
   <h1>PLACEHOLDER</h1>
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-warning">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <span class="nav-colors footer-font">Avec Plaisir</span></a>
+      </div>
+      <div class="col-md-4 d-flex align-items-center">
+        <span><a class="text-muted" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
+            aria-label="Find us on Google maps (opens in a new tab)">
+            <span class="footer-logo"><i class="fas fa-map-pin"></i>   Charlotte Street, London, W1</span></a>
+      </div> 
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3">
+          <span class="footer-logo"><i class="fas fa-phone"></i>  0207 123 4567 </span></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener"
+            aria-label="Follow us on Facebook (opens in a new tab)">
+            <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener"
+            aria-label="Follow us on Instagram (opens in a new tab)">
+            <span class="footer-logo"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com/" target="_blank" rel="noopener"
+            aria-label="Follow us on Twitter (opens in a new tab)">
+            <span class="footer-logo"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a></li>
+      </ul>
+    </footer>
+  </div>
+  <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
   </script>
