--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -48,14 +48,17 @@
         <h1 id="logo-text">Avec Plaisir</h1>
         <h2>Welcoming you "avec plaisir"...with pleasure!
         </h2>
-        <a href="#" class="btn btn-secondary btn-sm">Reserve</a>
+        <a href="#" class="btn btn-outline-light btn-sm ">Book a Table</a>
       </div>
     </div>
   </div>
   <!-- Hero -->
 
 
-  <h1>PLACEHOLDER</h1>
+  <div class="menus" >
+    <h1>Our menus</h1>
+  </div>
+  
   <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-warning">
       <div class="col-md-4 d-flex align-items-center">
