--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,13 +13,16 @@ a {
     z-index: 1;
 }
 
-
+.menus {
+    display: flex;
+    justify-content: center;
+}
 
 .hero-image {
     z-index: 2;
     padding-top: 60px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/hero.webp");
-    height: 600px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("../images/hero.webp");
+    height: 450px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -33,6 +36,10 @@ a {
     color:#efd485;
     font-size: 60px;
     padding-left: 20px;
+}
+
+#menus {
+    margin: 0 auto;
 }
 
 .footer-logo {
@@ -74,7 +81,7 @@ h2 {
     flex-direction: column;
     text-align: center;
     width: 100%;
-    height: 70vh;
+    height: 55vh;
     overflow: hidden;
     background-size: cover !important;
     background: radial-gradient(circle at center, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 37%, rgba(0,0,0,0.65) 100%);
@@ -82,4 +89,7 @@ h2 {
 
 .btn {
     margin-top: 20px;
+    color:#efd485;
+    border-color: #efd485;
+    background-color: #6c5736;
 }
