--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,10 +10,11 @@ a {
     text-decoration: none;
 }
 .navbar {
-    z-index: 1;
+    z-index: 10;
 }
 
 .menus {
+    padding-top: 20px;
     display: flex;
     justify-content: center;
 }
@@ -36,10 +37,6 @@ a {
     color:#efd485;
     font-size: 60px;
     padding-left: 20px;
-}
-
-#menus {
-    margin: 0 auto;
 }
 
 .footer-logo {
