--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,94 +1,9 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Avec Plaisir</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/style.css">
-</head>
+{% block content %}
 
-<body>
-      <!-- Nav Bar-->
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
-        <a class="navbar-brand" href="#"><span id="logo">A</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-left" id="navbarNavDropdown">
-          <ul class="navbar-nav justify-content-right">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"><span class="nav-colors">Home</span></a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <span class="nav-colors">Menus</span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Brunch</a></li>
-                <li><a class="dropdown-item" href="#">Lunch</a></li>
-                <li><a class="dropdown-item" href="#">Dinner</a></li>
-              </ul>
-            </li>
-            <li class="dropdown-item"><a class="nav-link" href="#"><span class="nav-colors">Reservations</span></a></li>
-            <li class="dropdown-item"><a class="nav-link" href="#"><span class="nav-colors">Sign Up</span></a></li>
-            <li class="dropdown-item"><a class="nav-link" href="#"><span class="nav-colors">Sign In</span></a></li>
-          </ul>
-        </div>
-      </nav>
-  <!-- Hero -->
-  <div class="hero-image">
-    <div class="container">
+<div class="menus">
+  <h1>The menus will go here</h1>
+</div>
 
-      <div class="cover-text">
-        <h1 id="logo-text">Avec Plaisir</h1>
-        <h2>Welcoming you "avec plaisir"...with pleasure!
-        </h2>
-        <a href="#" class="btn btn-outline-light btn-sm ">Book a Table</a>
-      </div>
-    </div>
-  </div>
-  <!-- Hero -->
-
-
-  <div class="menus" >
-    <h1>Our menus</h1>
-  </div>
-  
-  <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-warning">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-          <span class="nav-colors footer-font">Avec Plaisir</span></a>
-      </div>
-      <div class="col-md-4 d-flex align-items-center">
-        <span><a class="text-muted" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
-            aria-label="Find us on Google maps (opens in a new tab)">
-            <span class="footer-logo"><i class="fas fa-map-pin"></i>   Charlotte Street, London, W1</span></a>
-      </div> 
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3">
-          <span class="footer-logo"><i class="fas fa-phone"></i>  0207 123 4567 </span></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener"
-            aria-label="Follow us on Facebook (opens in a new tab)">
-            <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener"
-            aria-label="Follow us on Instagram (opens in a new tab)">
-            <span class="footer-logo"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com/" target="_blank" rel="noopener"
-            aria-label="Follow us on Twitter (opens in a new tab)">
-            <span class="footer-logo"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a></li>
-      </ul>
-    </footer>
-  </div>
-  <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-  </script>
-</body>
-
-</html>
+{%endblock%}
