--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Nav Bar-->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#"><span id="logo">A</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,7 +79,9 @@
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3">
                     <span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></li>
-                <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/" target="_blank" rel="noopener"
+                <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com" aria-label="Email us at bookings@avecplaisir.com">
+                        <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
+                <li class="ms-3"><a class="text-muted" href="" target="_blank" rel="noopener"
                         aria-label="Follow us on Facebook (opens in a new tab)">
                         <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a></li>
                 <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener"
