--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Lato&display=swap');
 
+/* 1. Base.html page and common to all pages */
+
 body {
     background-color: #6c5736;
-    color: #efd485;
     font-family: 'Lato', sans-serif;
 }
 
 a {
     text-decoration: none;
 }
+
+/* 1.1 navbar */
 .navbar {
     z-index: 10;
 }
 
-.menus {
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
+.nav-colors {
+    color: #efd485;
+    font: 10px;
+}
+
+#logo {
+    font-family: 'Allura', cursive;
+    color: #efd485;
+    font-size: 60px;
+    padding-left: 20px;
+}
+
+/* 1.2 hero image and text overlay */
+#logo-text {
+    font-family: 'Allura', cursive;
+    font-size: 80px;
 }
 
 .hero-image {
@@ -29,46 +44,7 @@ a {
     background-size: cover;
     display: grid;
     position: relative;
-    overflow: auto;
-}
-
-#logo {
-    font-family: 'Allura', cursive;
-    color:#efd485;
-    font-size: 60px;
-    padding-left: 20px;
-}
-
-.footer-logo {
-    color:#efd485;
-}
-.footer-address {
-    color:#efd485;
-}
-
-.nav-colors {
-    color:#efd485;
-    font: 10px;
-}
-
-
-.footer-font {
-    font-family: "Allura", cursive;
-    font-size: 30px;
-}
-
-.footer-font-two {
-    font-family: "Lato", sans-serif;
-    font-size: 20px;
-}
-
-#logo-text {
-    font-family: 'Allura', cursive;
-    font-size: 80px;
-}
-  
-h2 {
-    font-size: 30px;
+    overflow: hidden;
 }
 
 .cover-text {
@@ -81,12 +57,57 @@ h2 {
     height: 55vh;
     overflow: hidden;
     background-size: cover !important;
-    background: radial-gradient(circle at center, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 37%, rgba(0,0,0,0.65) 100%);
+    background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 37%, rgba(0, 0, 0, 0.65) 100%);
+}
+
+h1 {
+    color: #efd485;
+}
+
+h2 {
+    font-size: 30px;
+    color: #efd485;
 }
 
 .btn {
     margin-top: 20px;
-    color:#efd485;
+    color: #efd485;
     border-color: #efd485;
     background-color: #6c5736;
+}
+/* 1.3 Footer */
+
+.footer-logo {
+    color: #efd485;
+}
+
+.footer-address {
+    color: #efd485;
+}
+
+.footer-font {
+    font-family: "Allura", cursive;
+    font-size: 30px;
+}
+
+.footer-font-two {
+    font-family: "Lato", sans-serif;
+    font-size: 20px;
+}
+
+/* 2. Index.html page */
+
+.menus {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+
+.card {
+    background: #efd485;
+}
+
+p.card-text {
+    color: black;
 }
