Add booking models and filter classes to admin.py

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,11 +12,11 @@
         <img src="/static/images/brunch.webp" class="card-img-top"
           alt="Los Angeles Skyscrapers" />
         <div class="card-body">
-          <h5 class="card-title text-center">Brunch</h5>
+          <h5 class="card-title text-center">Breakfast</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
             additional content.</p>
           <div class="text-center">
-            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Brunch Menu</a>
+            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Breakfast Menu</a>
           </div>
         </div>
       </div>
