--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
 
 <body>
     <!-- Nav Bar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+    <nav class="navbar  navbar-expand-lg navbar-dark bg-transparent">
         <a class="navbar-brand" href="#"><span id="logo">A</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,19 +46,7 @@
         </div>
     </nav>
     <!-- End Nav Bar-->
-    <!-- Hero -
-    <div class="hero-image">
-        <div class="container">
 
-            <div class="cover-text">
-                <h1 id="logo-text">Avec Plaisir</h1>
-                <h2>Welcoming you "avec plaisir"...with pleasure!
-                </h2>
-                <a href="#" class="btn btn-outline-light btn-sm ">Book a Table</a>
-            </div>
-        </div>
-    </div>
-    <!-- End Hero -->
 
 
     <main class="flex-shrink-0 main-bg">
@@ -73,7 +61,7 @@
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-warning">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <span class="nav-colors footer-font">Avec Plaisir</span></a>
+                    <span class="footer-font">Avec Plaisir</span></a>
             </div>
             <div class="col-md-4 d-flex align-items-center">
                 <span><a class="text-muted" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
@@ -83,7 +71,8 @@
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3">
                     <span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></li>
-                <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com" aria-label="Email us at bookings@avecplaisir.com">
+                <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
+                        aria-label="Email us at bookings@avecplaisir.com">
                         <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
                 <li class="ms-3"><a class="text-muted" href="" target="_blank" rel="noopener"
                         aria-label="Follow us on Facebook (opens in a new tab)">
