--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,19 @@
 
 {% block content %}
 
+<!-- Hero -->
+<div class="hero-image">
+  <div class="container">
+      <div class="cover-text">
+          <h1 id="logo-text">Avec Plaisir</h1>
+          <h2>Welcoming you "avec plaisir"...with pleasure!
+          </h2>
+          <a href="#" class="btn btn-outline-light btn-sm ">Book a Table</a>
+      </div>
+  </div>
+</div>
+<!-- End Hero -->
+
 <div class="menus">
   <h1>Our Menus</h1>
 </div>
