--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+
+    <!-- Fengyuan Chen's Datepicker -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css"
+        integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"
+        integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,7 +31,8 @@
         <div class="collapse navbar-collapse justify-content-left" id="navbarNavDropdown">
             <ul class="navbar-nav justify-content-right">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}"><span class="nav-colors">Home</span></a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}"><span
+                            class="nav-colors">Home</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -34,13 +45,17 @@
                         <li><a class="dropdown-item" href="#">Dinner</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'bookings' %}"><span class="nav-colors">Reservations</span></a>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'bookings' %}"><span
+                            class="nav-colors">Reservations</span></a>
                 </li>
                 {% if user.is_authenticated %}
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_logout' %}"><span class="nav-colors">Sign out</span></a></li>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_logout' %}"><span
+                            class="nav-colors">Sign out</span></a></li>
                 {% else %}
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_signup' %}"><span class="nav-colors">Register</span></a></li>
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_login' %}"><span class="nav-colors">Log In</span></a></li>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_signup' %}"><span
+                            class="nav-colors">Register</span></a></li>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_login' %}"><span
+                            class="nav-colors">Log In</span></a></li>
                 {% endif %}
             </ul>
         </div>
