--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -11,7 +11,7 @@
     <h1>Reservations</h1>
     <h3>We look forward to serving you, {{ user.first_name }}!</h3>
     <form method="post" autocomplete="off">
-        {{ reservation_form | crispy}}
+        {{ form | crispy}}
         {% csrf_token %}
         <button type="submit" class="btn btn-signup btn-lg">Book it!</button>
     </form>
