--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                         <li><a class="dropdown-item" href="#">Dinner</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'bookings' %}"><span
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}"><span
                             class="nav-colors">Reservations</span></a>
                 </li>
                 {% if user.is_authenticated %}
