--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
           <h1 id="logo-text">Avec Plaisir</h1>
           <h2>Welcoming you "avec plaisir"...with pleasure!
           </h2>
-          <a href="#" class="btn btn-outline-light btn-sm ">Book a Table</a>
+          <a href="{% url 'create_reservation' %}" class="btn btn-outline-light btn-sm ">Book a Table</a>
       </div>
   </div>
 </div>
