--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,12 @@ h2 {
     border-color: #efd485;
     background-color: #6c5736;
 }
-/* 1.3 Footer */
+
+.alert {
+    max-width: fit-content;
+}
+
+/*  Footer */
 
 .footer-logo {
     color: #efd485;
