Create a view reservations view and template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -58,7 +58,7 @@
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
             additional content.</p>
           <div class="text-center">
-            <a href="https://www.google.com/" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
+            <a href="#" class="btn btn-outline-light btn-sm stretched-link">Dinner Menu</a>
           </div>
         </div>
       </div>
