Add editReservationViwe and Template

--- a/bookings/templates/bookings/myReservations.html
+++ b/bookings/templates/bookings/myReservations.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row align-items-start">
                 <div class="col">
-                    <a href="#" class="btn btn-outline-light btn-sm">Edit</a>
+                    <a href="{% url 'update_reservation' reservation.pk %}" class="btn btn-outline-light btn-sm">Edit</a>
                     <a href="#" class="btn btn-outline-light btn-sm">Delete</a>
                 </div>
             </div>
