Add delete_reservation view, template and path

--- a/bookings/templates/bookings/myReservations.html
+++ b/bookings/templates/bookings/myReservations.html
@@ -29,7 +29,7 @@
             <div class="row align-items-start">
                 <div class="col">
                     <a href="{% url 'update_reservation' reservation.pk %}" class="btn btn-outline-light btn-sm">Edit</a>
-                    <a href="#" class="btn btn-outline-light btn-sm">Delete</a>
+                    <a href="{% url 'delete_reservation' reservation.pk %}" class="btn btn-outline-light btn-sm">Delete</a>
                 </div>
             </div>
         </div>
