--- a/bookings/templates/bookings/delete_reservation.html
+++ b/bookings/templates/bookings/delete_reservation.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 {% load crispy_forms_tags %}
+
 <form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Update">
+    <p>Are you sure you want to delete "{{ object }}"?</p>
+    {{ form }}
+    <input type="submit" value="Confirm">
 </form>
 {% endblock %}
