--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -15,6 +15,8 @@
     {{ form | crispy}}
     {% csrf_token %}
     <button type="submit" class="btn btn-signup btn-lg">Book it!</button>
+    <a class="btn btn-outline-light btn-lg" aria-current="page" href="{% url 'homepage' %}"><span
+      class="nav-colors">Cancel</span></a>
   </form>
 </div>
 {% else %}
