--- a/bookings/templates/bookings/myReservations.html
+++ b/bookings/templates/bookings/myReservations.html
@@ -2,6 +2,19 @@
 {% block content %}
 {% if user.is_authenticated %}
 
+{% if messages %}
+    <div class="container alert alert-warning alert-dismissible fade show text-center fix" role="alert">
+        <div class="row">
+            <div class="col align-self-center">
+                {% for message in messages %}
+                {{ message}}
+                {% endfor %}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
+
+    </div>
+{% endif %}
 
 <div class="container">
     <h1 class="display-4">{{ user.first_name }}'s Reservations</h1>
