--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
 
         {% block content %}
         <!-- Content Goes here -->
-        {% endblock content %}
+        {% endblock %}
 
     </main>
 
