Style buttons on sign in/out and register pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,7 +62,7 @@ a {
     background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 37%, rgba(0, 0, 0, 0.65) 100%);
 }
 
-h1, h2, h3 {
+h1, h2, h3, p {
     color: #efd485;
 }
 
@@ -82,7 +82,9 @@ h2 {
     color: #fff !important;
 } */
 
-
+.card p {
+    color: black;
+}
 
 /*  4. Footer */
 
@@ -117,4 +119,8 @@ h2 {
 
 p.card-text {
     color: black;
+}
+
+#customForm {
+    background-color: #efd485;
 }
