--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -22,6 +22,8 @@
         {% endif %}
         <!-- <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a> -->
         <button class="primaryAction btn btn-outline-light btn-lg" type="submit">{% trans "Sign In" %}</button>
+        <a class="btn btn-outline-light btn-lg" aria-current="page" href="{% url 'homepage' %}"><span
+          class="nav-colors">Cancel</span></a>
       </form>
     </div>
   </div>
