--- a/templates/base.html
+++ b/templates/base.html
@@ -59,9 +59,9 @@
                             class="nav-colors">Sign out</span></a></li>
                 {% else %}
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'account_signup' %}"><span
-                            class="nav-colors">Register</span></a></li>
+                            class="nav-colors">Sign Up</span></a></li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'account_login' %}"><span
-                            class="nav-colors">Log In</span></a></li>
+                            class="nav-colors">Sign In</span></a></li>
                 {% endif %}
             </ul>
         </div>
