--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -19,7 +19,13 @@
   </form>
 </div>
 {% else %}
-Hello, guest! Please register first to make an online booking.
+<div class="container">
+  <h3>Hello, guest!</h3> 
+  <p>You need to <a href="../accounts/login/">sign in</a> to make a reservation. If you don't have an account
+    yet, please <a href="../accounts/signup">sign up</a> here.</p>
+  </h3>
+</div>
+
 {% endif %}
 
 <script>
