--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -19,6 +19,8 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
         {% endif %}
         <button class="btn btn-outline-light btn-lg" type="submit">{% trans 'Sign Out' %}</button>
+        <a class="btn btn-outline-light btn-lg" aria-current="page" href="{% url 'homepage' %}"><span
+          class="nav-colors">Cancel</span></a>
       </form>
     </div>
   </div>
