Add div to footer li so social icons wrap in a block

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,29 +96,38 @@
                 <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                     <span class="footer-font">Avec Plaisir</span></a>
             </div>
-            <div class="col-md-4 d-flex align-items-center">
-                <span><a class="text-muted" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
-                        aria-label="Find us on Google maps (opens in a new tab)">
-                        <span class="footer-logo"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
+            <div>
+                <ul class="nav col-md-auto justify-content-end list-unstyled">
+                    <li class="ms-3">
+                        <span><a class="text-muted" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank"
+                                rel="noopener" aria-label="Find us on Google maps (opens in a new tab)">
+                                <span class="footer-logo"><i class="fas fa-map-pin"></i> Charlotte Street, London,
+                                    W1</span></a></span></li>
+                    <li class="ms-3">
+                        <span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></li>
+                    
+                    <div class="d-flex flex-wrap justify-content-end w-100">
+                        <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
+                            aria-label="Email us at bookings@avecplaisir.com">
+                            <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
+                        <li class="ms-3"><a class="text-muted" href="" target="_blank" rel="noopener"
+                                aria-label="Follow us on Facebook (opens in a new tab)">
+                                <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
+                        </li>
+                        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank"
+                                rel="noopener" aria-label="Follow us on Instagram (opens in a new tab)">
+                                <span class="footer-logo"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
+                        </li>
+                        <li class="ms-3"><a class="text-muted" href="https://www.twitter.com/" target="_blank"
+                                rel="noopener" aria-label="Follow us on Twitter (opens in a new tab)">
+                                <span class="footer-logo"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
+                        </li>
+                </ul>
             </div>
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3">
-                    <span class="footer-logo"><i class="fas fa-phone"></i> 0207 123 4567 </span></li>
-                <li class="ms-3"><a class="text-muted" href="mailto:bookings@avecplaisir.com"
-                        aria-label="Email us at bookings@avecplaisir.com">
-                        <span class="footer-logo"><i class="fa-solid fa-envelope fa-lg"></i></span></a></li>
-                <li class="ms-3"><a class="text-muted" href="" target="_blank" rel="noopener"
-                        aria-label="Follow us on Facebook (opens in a new tab)">
-                        <span class="footer-logo"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a></li>
-                <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/" target="_blank" rel="noopener"
-                        aria-label="Follow us on Instagram (opens in a new tab)">
-                        <span class="footer-logo"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a></li>
-                <li class="ms-3"><a class="text-muted" href="https://www.twitter.com/" target="_blank" rel="noopener"
-                        aria-label="Follow us on Twitter (opens in a new tab)">
-                        <span class="footer-logo"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a></li>
-            </ul>
+
         </footer>
     </div>
+
     <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
 
 </body>
