Fix: align 'Avec Plaisir' to top of footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@
     </main>
 
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-warning">
+        <footer class="d-flex flex-wrap justify-content-between align-items-start py-3 my-4 border-top border-warning">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                     <span class="footer-font">Avec Plaisir</span></a>
