Fix: moved datepicker script into base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,6 +129,11 @@
     </div>
 
     <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+          $("#id_reservation_date").datepicker();
+        });
+      </script>
 
 </body>
 
